--- a/A_dbms/templates/dbms/agree/agree_board/counter/_a/warrant-sign.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/_a/warrant-sign.html
@@ -44,6 +44,8 @@
             <td style="border: 0pt; width:135pt" align="right" valign="top">甲方（抵押权人）：</td>
         {% elif counter_obj.counter_typ in Z_COUNTER_TYP_LIST %}
             <td style="border: 0pt; width:115pt" align="right" valign="top">甲方（质权人）：</td>
+        {% else %}
+            <td style="border: 0pt; width:115pt" align="right" valign="top">？？？？</td>
         {% endif %}
         <td style="border: 0pt" valign="top">成都武侯中小企业融资担保有限责任公司</td>
 
