--- a/A_dbms/templates/dbms/agree/agree_board/loan_co/l-c-s-d.html
+++ b/A_dbms/templates/dbms/agree/agree_board/loan_co/l-c-s-d.html
@@ -190,7 +190,7 @@
                                     {% include 'dbms/agree/agree_board/sign-date.html' %}
                                 {% elif ownership.owner.genre == 2 %}
                                     <p>抵押人：<strong><u>{{ ownership.owner.name }}</u></strong></p>
-                                    <p>（本人或授权代表签字）</p>
+                                    <p>（本人或授权代理人签字）</p>
                                     {% include 'dbms/agree/agree_board/sign-date.html' %}
                                 {% endif %}
                             {% endfor %}
