--- a/A_dbms/templates/dbms/agree/agree_board/counter/_c/16-notify-1.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/_c/16-notify-1.html
@@ -3,15 +3,13 @@
 <p>如至甲方：成都武侯中小企业融资担保有限责任公司</p>
 <p>地址：武科西五路360号西部智谷B区2栋4单元4楼（武侯政务服务中心背后）</p>
 <p>电话：028-85566171</p>
-<p>传真：028-85566171</p>
-<p>邮政编码：610041</p>
 <p>收件人：成都武侯中小企业融资担保有限责任公司</p>
 <!--COUNTER_TYP_LIST = (
     (1, '企业担保'), (2, '个人保证'),
     (11, '房产抵押'), (12, '土地抵押'), (13, '动产抵押'), (15, '车辆抵押'),
     (31, '应收质押'), (32, '股权质押'), (33, '票据质押'),
     (51, '股权预售'), (52, '房产预售'), (53, '土地预售'))-->
-{% if counter_obj.assure_counter.custome.all %}
+{% if counter_obj.assure_counter.custome.all %} <!--(1, '企业担保'), (2, '个人保证')-->
     {% for custom in counter_obj.assure_counter.custome.all %}
         {% if custom.genre == 1 %}
                 <p>如至乙方：<strong><u>{{ custom.name }}</u></strong></p>
@@ -31,16 +29,14 @@
             {% endif %}
         {% endif %}
     {% endfor %}
-    {#MORTGAGE_COUNTER_TYP_LIST = [11, 12, 13, 14, 15, ]#}
-{% else %}
+{% elif counter_obj.warrant_counter.warrant.all %} <!--抵质押担保-->
     <!--WARRANT_TYP_LIST = [
         (1, '房产'), (2, '房产包'), (5, '土地'), (6, '在建工程'), (11, '应收账款'),
         (21, '股权'), (31, '票据'), (41, '车辆'), (51, '动产'), (55, '其他'), (99, '他权')]-->
     {% for warrant in counter_obj.warrant_counter.warrant.all %}
         <div>
             {% if forloop.first %}
-                {#(1, '房产'), (2, '房产包'), (5, '土地'), (6, '在建工程')#}
-                {% if warrant.ownership_warrant.all %}
+                {% if warrant.ownership_warrant.all %}<!--(1, '房产'), (2, '房产包'), (5, '土地'), (6, '在建工程')-->
                     {% for ownership in warrant.ownership_warrant.all %}
                         <p>如至乙方：<strong><u>{{ ownership.owner.name }}</u></strong></p>
                         <p>地址：<strong><u>{{ ownership.owner.contact_addr }}</u></strong></p>
@@ -92,6 +88,11 @@
             {% endif %}
         </div>
     {% endfor %}
+{% else %}
+    <p><strong>？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？</strong></p>
+    <p><strong>？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？</strong></p>
+    <p><strong>？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？</strong></p>
+    <p><strong>？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？</strong></p>
 {% endif %}
 <div>
     <p>如至丙方：<strong><u>{{ agree_obj.lending.summary.custom.name }}</u></strong></p>
