--- a/A_dbms/templates/dbms/agree/agree_board/entrust/max/6-charge-1.html
+++ b/A_dbms/templates/dbms/agree/agree_board/entrust/max/6-charge-1.html
@@ -19,4 +19,4 @@
 <p>4）乙方于 前将该笔担保所涉及的担保综合费款项支付给甲方；</p>
 <p>5）<u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>。</p>
 <p>（四）收取方式：现金或转账支付。</p>
-<p>（五）乙方未在上述规定的时间内按时足额支付担保综合费的，甲方有权在乙方足额支付担保综合费之前拒绝与其债权人签订担保合同，乙方应按未付担保综合费金额的0.08%/日支付违约金。担保期内，乙方提前履行甲方担保债务，甲方所收担保费皆不退还。</p>
+<p>（五）乙方未在上述规定的时间内按时足额支付担保综合费的，甲方有权在乙方足额支付担保综合费之前拒绝与其债权人签订担保合同，乙方应按未付担保综合费金额的<strong><u>0.08%/日</u></strong>支付违约金。担保期内，乙方提前履行甲方担保债务，甲方所收担保费皆不退还。</p>
