--- a/A_dbms/templates/dbms/appraisal/endor-list.html
+++ b/A_dbms/templates/dbms/appraisal/endor-list.html
@@ -29,7 +29,7 @@
                 </tr>
                 <tr>
                     <td class="bb tc" width="12.5%">金额</td>
-                    <td class="bb tc" width="15%">{{ amount_str_w }}万元</td>
+                    <td class="bb tc" width="12.5%">{{ amount_str_w }}万元</td>
                     <td class="bb tc" width="12.5%">期限</td>
                     <td class="bb tc" colspan="2">{{ credit_term_str }}个月</td>
                     <td class="bb tc" colspan="2">月利率（‰）</td>
@@ -44,7 +44,7 @@
                 <tr>
                     <td class="bbb" colspan="3">调查意见：</td>
                     <td class="bbb" colspan="2">业务部意见：</td>
-                    <td class="bbb" colspan="3">分管领导意见：</td>
+                    <td class="bbb" colspan="3" width="31%">分管领导意见：</td>
                 </tr>
                 <tr>
                     <td class="brl" colspan="3">
@@ -55,19 +55,22 @@
                     <td class="brl" colspan="3"></td>
                 </tr>
                 <tr>
-                    <td class="brt" colspan="3"><div align="right" style="padding-right: 45pt"><span>客户经理：</span></div></td>
+                    <td class="brt" colspan="3"><div align="right" style="padding-right: 85pt"><span>客户经理：</span></div></td>
                     <td class="brt" colspan="2"><div align="right" style="padding-right: 45pt"><span>负责人：</span></div></td>
                     <td class="brt" colspan="3"><div align="right" style="padding-right: 45pt"><span>分管领导：</span></div></td>
                 </tr>
                 <tr>
-                    <td class="bb" colspan="3">专职评审意见：<br><br><br><br><br><br>
+                    <td class="bb" colspan="3">专职评审意见：<br><br><br><br><br><br><br>
                         <div align="right" style="padding-right: 45pt"><span>专职评审：</span></div>
+                        <br>
                     </td>
-                    <td class="bb" colspan="2">风控部意见：<br><br><br><br><br><br>
+                    <td class="bb" colspan="2">风控部意见：<br><br><br><br><br><br><br>
                         <div align="right" style="padding-right: 45pt"><span>负责人：</span></div>
+                        <br>
                     </td>
-                    <td class="bb" colspan="3">分管领导意见：<br><br><br><br><br><br>
+                    <td class="bb" colspan="3">分管领导意见：<br><br><br><br><br><br><br>
                         <div align="right" style="padding-right: 45pt"><span>分管领导：</span></div>
+                        <br>
                     </td>
                 </tr>
 
