--- a/A_dbms/templates/dbms/agree/agree_board/loan_co/l-c-s-d.html
+++ b/A_dbms/templates/dbms/agree/agree_board/loan_co/l-c-s-d.html
@@ -95,7 +95,7 @@
             <p>（5）若因抵押物被列入拆迁范围获得的交换产权房屋与抵押权人重新设定抵押权。</p>
             <p>6.7抵押人在经抵押权人书面同意，且满足下列条件下可出售或出租全部或部分抵押物：</p>
             <p>（1）确保出售抵押物应收的全部价款或等值货币已全部汇入抵押权人指定的账户，非经抵押权人同意，不得动用；或将上述款项全部用于偿还主合同项下所有到期（包括提前到期）贷款本息及相关费用；</p>
-            <p>（2)提供了其他令抵押权人满意的担保措施。</p>
+            <p>（2)提供了其他符合抵押权人要求的担保措施。</p>
             <p>6.8经抵押权人书面同意处分抵押物的，抵押人应向处分行为相对人告知抵押物已设定抵押的情况，且抵押物处分所得价款或补偿金等处分对价，抵押权人有权选择下列方式进行处理：</p>
             <p>（1）清偿或提前清偿主合同项下贷款本息及相关费用；</p>
             <p>（2）转为定期存款，存单用于质押；</p>
