--- a/A_dbms/templates/dbms/custom/custom-scan.html
+++ b/A_dbms/templates/dbms/custom/custom-scan.html
@@ -14,6 +14,7 @@
         {% include 'dbms/custom/modl/trustee-del-mod.html' %}
         {% include 'dbms/custom/modl/spouse-add-mod.html' %}
         {% include 'dbms/custom/modl/spouse-del-mod.html' %}
+        {% include 'dbms/custom/modl/custom-change-mod.html' %}
 
         {% include 'dbms/custom/modl/custom-article-add-mod.html' %}
     </div>
@@ -29,6 +30,8 @@
     {% include 'dbms/custom/extra/js-spouse-add.html' %}
     {% include 'dbms/custom/extra/js-spouse-del.html' %}
     {% include 'dbms/article/extra/js-article-add.html' %}
+
+    {% include 'dbms/custom/extra/js-custom-change.html' %}
 
     {% include 'dbms/js/js-search-custom.html' %}
 
