--- a/A_dbms/templates/dbms/agree/agree_board/loan_en/e-01-text-1.html
+++ b/A_dbms/templates/dbms/agree/agree_board/loan_en/e-01-text-1.html
@@ -64,7 +64,7 @@
 <p>7.6借款人可以在第一期之后的任一期还款日（最后一期的还款日除外）七日前对贷款人做出提前还款意向的书面申请。借款人提前还款经贷款人书面同意的，借款人可以提前偿还部分或全部贷款。借款人若提前全部还款的，必须先结清提前还款日的当期应缴本金和利息，再核算并归还全部未清偿的本金。提前还款申请应列明提前还款的日期和金额，提前还款书面申请一经贷款人同意即为不可撤销。</p>
 <p>7.7如果借款人申请提前还款时存在挪用贷款或逾期归还贷款本金或逾期支付利息情形的，除了应当按照7.5款、7.6款约定向贷款人支付相应款项之外，还应当按照本合同7.1、7.2、7.3款向贷款人支付相应的违约金。</p>
 <p><strong>第八条  借款人的陈述与保证</strong></p>
-<p>8.1签署和履行本合同是借款人真实的意思表示，不存在任何法律上的瑕疵。</p>
+<p>8.1借款人是依法设立并合法存续的民事主体，签署和履行本合同是借款人真实的意思表示，并经过所有必须的同意、批准及授权，包括但不限于董事会或股东会（股东大会）的决议通过及有关主管部门审批通过等，不存在任何法律上的瑕疵。</p>
 <p>8.2 借款人在签署和履行本合同过程中向贷款人提供的全部文件、报表、资料及信息是真实、准确、完整和有效的，未向贷款人隐瞒、遗漏、虚假或误导性陈述可能影响其财务状况和还款能力的任何信息。</p>
 <p>8.3借款人自愿接受贷款人检查、监督贷款的使用情况，接受贷款人了解其计划执行、经营管理、财务活动、物资库存等情况，并应贷款人要求提供有关的资料和凭证，并且对所提供资料的真实性、完整性和有效性负责，不提供虚假材料或隐瞒重要事实。</p>
 <p>8.4借款人应随时执行贷款人为实现本合同项下的各项权利和利益而发出的任何指示，发出贷款人可能要求发出的与本合同有关的各项通知、命令和指示；签署贷款人可能要求签署的与本合同有关的法定的或其他的抵押合同、质押合同、转让合同或其他合同以完善贷款人在本合同项下的各项权利和利益。</p>
@@ -80,7 +80,7 @@
 <p>9.4贷款人应当对借款人提供的资料及信息保密，但法律另有规定或本合同另有约定的除外。</p>
 <p><strong>第十条  借款人的权利与义务</strong></p>
 <p>10.1借款人有权要求贷款人按合同的约定发放贷款。</p>
-<p>10.2借款人有权要求贷款人对其提供的有关资料、信息予以保密，但法律法规和规章另有规定及本合同另有约定的除外。</p>
+<p>10.210.2借款人有权要求贷款人对其提供的有关财务资料、生产经营等方面的资料、信息予以保密，但法律法规和规章另有规定及本合同另有约定的除外。</p>
 <p>10.3借款人应当按本合同约定的时间、金额和币种偿还本合同项下的贷款本金并支付利息、违约金、赔偿金、费用等。</p>
 <p>10.4借款人不应将本合同项下贷款挪作他用。</p>
 <p>10.5借款人应遵循贷款人与办理贷款业务相关的业务制度及操作惯例，包括但不限于配合贷款人对贷款使用情况和借款人经营情况的监督检查，及时提供贷款人要求的一切财务报表、其他资料及信息，并保证所提供文件、资料和信息是真实、完整、准确的。</p>
