--- a/A_dbms/templates/dbms/custom/scan/custom-summry.html
+++ b/A_dbms/templates/dbms/custom/scan/custom-summry.html
@@ -3,20 +3,41 @@
         <label>客户情况</label>
         <label class="navbar-right">
             {% if PAGE_TITLE == '客户预览' %}
-                <a class="btn btn-primary btn-sm " id="addArticle">创建项目 </a>
-                {% if custom_obj.genre == 1 %}
-                    <a class="btn btn-primary btn-sm " id="addShareholderB">添加股东/投资人 </a>
-                    <a class="btn btn-primary btn-sm " id="addTrusteeB">添加董事/理事 </a>
-                {% elif custom_obj.genre == 2 %}
-                    <a class="btn btn-primary btn-sm " id="addSpouseB">添加配偶 </a>
+                {% if 'article_add_ajax' in authority_list %}
+                    <a class="btn btn-primary btn-sm " id="addArticle">创建项目 </a>
                 {% endif %}
-                <a class="btn btn-primary btn-sm " id="editCustom">修改</a><!--#path('custom/edit/'-->
-                <a class="btn btn-danger btn-sm " id="delCustom">删除</a><!--#path('custom/del/'-->
+                {% if custom_obj.genre == 1 %}
+                    {% if 'custom_shareholder_add_ajax' in authority_list %}
+                        <a class="btn btn-primary btn-sm " id="addShareholderB">添加股东/投资人 </a>
+                    {% endif %}
+                    {% if 'custom_trustee_add_ajax' in authority_list %}
+                        <a class="btn btn-primary btn-sm " id="addTrusteeB">添加董事/理事 </a>
+                    {% endif %}
+                {% elif custom_obj.genre == 2 %}
+                    {% if 'custom_spouse_add_ajax' in authority_list %}
+                        <a class="btn btn-primary btn-sm " id="addSpouseB">添加配偶 </a>
+                    {% endif %}
+                {% endif %}
+                {% if 'custom_edit_ajax' in authority_list %}
+                    <a class="btn btn-primary btn-sm " id="editCustom">修改</a>
+                {% endif %}
+                {% if 'custom_del_ajax' in authority_list %}
+                    <a class="btn btn-danger btn-sm " id="delCustom">删除</a>
+                {% endif %}
+                {% if 'custom_change_ajax' in authority_list %}
+                    <a class="btn btn-primary btn-sm " id="changeCustom">变更状态</a>
+                {% endif %}
             {% endif %}
             {% if PAGE_TITLE == '保后详情' %}
-                <a class="btn btn-primary btn-sm " id="reviewPlanB">保后计划</a><!--#path('custom/del/'-->
-                <a class="btn btn-primary btn-sm " id="autoReviewB">自主保后</a><!--#path('custom/del/'-->
-                <a class="btn btn-primary btn-sm " id="investigateB">补充调查</a><!--#path('custom/del/'-->
+                {% if 'review_plan_ajax' in authority_list %}
+                    <a class="btn btn-primary btn-sm " id="reviewPlanB">保后计划</a>
+                {% endif %}
+                {% if 'review_update_ajax' in authority_list %}
+                    <a class="btn btn-primary btn-sm " id="autoReviewB">自主保后</a>
+                {% endif %}
+                {% if 'investigate_add_ajax' in authority_list %}
+                    <a class="btn btn-primary btn-sm " id="investigateB">补充调查</a>
+                {% endif %}
             {% endif %}
         </label>
     </div>
