--- a/A_dbms/templates/dbms/agree/agree_board/loan_co/mortgage-list.html
+++ b/A_dbms/templates/dbms/agree/agree_board/loan_co/mortgage-list.html
@@ -160,6 +160,6 @@
         {% elif counter_typ in Z_COUNTER_TYP_LIST %}
             <td style="border: 0pt; width:115pt" align="center" valign="top">质权人（公章）：</td>
         {% endif %}
-        <td style="border: 0pt" valign="top">成都武侯中小企业融资担保有限责任公司</td>
+        <td style="border: 0pt" valign="top">{{ UN }}</td>
     </tr>
 </table>
