--- a/A_dbms/templates/dbms/agree/agree_board/counter/_c/counter-home-y.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/_c/counter-home-y.html
@@ -43,11 +43,11 @@
                 {% endfor %}
                 {#(11, '应收账款')#}
             {% elif warrant.warrant_typ == 11 %}
-                {% if warrant.warrant.receive_warrant.receive_owner.genre == 1 %}
+                {% if warrant.receive_warrant.receive_owner.genre == 1 %}
                     <p><strong>出质人（乙方）：{{ warrant.receive_warrant.receive_owner.name }}</strong></p>
                     <p>住所（地址）：{{ warrant.receive_warrant.receive_owner.company_custome.registered_addr }}</p>
                     <p>法定代表人：{{ warrant.receive_warrant.receive_owner.company_custome.representative }}</p>
-                {% elif warrant.warrant.receive_warrant.receive_owner.genre == 2 %}
+                {% elif warrant.receive_warrant.receive_owner.genre == 2 %}
                     <p><strong>出质人（乙方）：{{ warrant.receive_warrant.receive_owner.name }}</strong></p>
                     <p>住所（地址）：{{ warrant.receive_warrant.receive_owner.person_custome.license_addr }}</p>
                     <p>身份证号码：{{ warrant.receive_warrant.receive_owner.person_custome.license_num }}</p>
