--- a/A_dbms/templates/dbms/report/balance_custom/top-class.html
+++ b/A_dbms/templates/dbms/report/balance_custom/top-class.html
@@ -1,6 +1,10 @@
 <div class="table-responsive">
     <table class="table table-bordered table-hover table-condensed active">
-        <caption>{{ PAGE_TITLE }}统计表（按区域）</caption>
+        {% if t_typ == 99 %}
+            <caption>{{ c_typ_c }}金额{{ screen_value|floatformat:0 }}元以上（含）客户及占比</caption>
+        {% else %}
+            <caption>{{ t_typ_t }}{{ c_typ_c }}客户及占比</caption>
+        {% endif %}
         <thead>
         <tr style="text-align: center">
             <th>序号</th>
