--- a/A_dbms/templates/dbms/agree/agree_board/loan_co/l-c-s-d.html
+++ b/A_dbms/templates/dbms/agree/agree_board/loan_co/l-c-s-d.html
@@ -18,7 +18,7 @@
         <!--合同主体-->
         <div>
             <p>
-                为保障抵押权人与主合同债务人<strong><u>{{ agree_obj.lending.summary.custom.name }}</u></strong>于{% include 'dbms/agree/agree_board/date-period.html' %}所签订的编号为:<strong><u>{{ agree_obj.agree_num }}</u></strong>号的《{{ agree_obj.get_agree_name_display }}》（以下称主合同）的履行，保障抵押权人权利的实现，抵押人愿意以其合法所有的财产为抵押权人设定抵押权，抵押人、抵押权人依照我国有关法律、法规，经协商一致，订立本合同。
+                为保障抵押权人与主合同债务人<strong><u>{{ agree_obj.lending.summary.custom.name }}{% if agree_obj.lending.summary.borrower.all %}{% for borrower in agree_obj.lending.summary.borrower.all %}、{{ borrower.name }}{% endfor %}{% endif %}</u></strong>于{% include 'dbms/agree/agree_board/date-period.html' %}所签订的编号为:<strong><u>{{ agree_obj.agree_num }}</u></strong>号的《{{ agree_obj.get_agree_name_display }}》（以下称主合同）的履行，保障抵押权人权利的实现，抵押人愿意以其合法所有的财产为抵押权人设定抵押权，抵押人、抵押权人依照我国有关法律、法规，经协商一致，订立本合同。
             </p>
             <p><strong>第一条 抵押财产</strong></p>
             <p>1.1抵押人提供的抵押财产是：<strong><u>{{ counter_property_type }}</u></strong>（以下称“抵押物”）。</p>
@@ -141,21 +141,7 @@
             <p>（1）提交<u>/</u>仲裁委员会仲裁；</p>
             <p>（2）向抵押权人所在地有管辖权的法院提起诉讼。</p>
             <p><strong>第十条 通讯及送达</strong></p>
-            <p>10.1本合同规定一方向相对方发出的通知或书面函件可通过当面递交、专递信函、传真或电子邮件、手机短信等电子通讯方式送达。</p>
-            <p>10.2本合同双方确认的有效送达地址如下：</p>
-            <div>{% include 'dbms/agree/agree_board/loan_co/notify-1.html' %}</div>
-            <p>如至抵押权人：{{ UN }}</p>
-            <p>地址：{{ ADD }}</p>
-            <p>电话：{{ CNB }}</p>
-            <p>邮政编码：610041</p>
-            <p>收件人：{{ UN }}</p>
-            <p>10.3抵押权人对抵押人发出的函件在以下时间通知被视为已经送达：</p>
-            <p>（1）如果以当面递交方式送达，送达指定地址并签署回执或其他送达证明；</p>
-            <p>（2）如果是以专递信函方式送达，为递交日后的第三个工作日；</p>
-            <p>（3）如果是以传真的方式送达，为发送传真方的传真机发送的报告确认书（表明已向相关传真号码发送完整的、未中断的传真）上标记之日视为已送达收件人；</p>
-            <p>（4）如果是以电子邮件、手机短信等数据电文形式的，该等通知自发送之日视为已送达收件人。</p>
-            <p>10.4本合同有效期间，任何一方的住所或通讯地址、联系人、联系方式等发生变更的，应当在变更后立即通知或可能发生前7个工作日内书面通知相对方；企业或者其他组织抵押人名称（自然人抵押人姓名）、住所等发生变化而未书面通知抵押权人，抵押权人按本合同所载名称（姓名）、通讯地址、住所向抵押人发送所有文书，视同已向抵押人送达。</p>
-            <p>10.5抵押权人通过新闻媒体进行公告催收，公告期间超过15天即视为对主合同债务人、抵押人完成送达。</p>
+            <div>{% include 'dbms/agree/agree_board/loan_co/notify-d.html' %}</div>
             <p><strong>第十一条 其他条款</strong></p>
             <p>11.1本合同所约定的抵押人应承担的主合同债权人/抵押权人所花费律师费（律师代理费）是指主合同债权人/抵押权人依据四川省现行律师服务收费规定如/即《四川省律师法律服务收费行业指导标准》(川发改价格〔2018〕93号)所计算并承担/支付/花费的费用；如果确实由于案情需要，主合同债权人/抵押权人采用了其他付费标准或计费方式，抵押人应据实承担。</p>
             <p>11.2在本合同有效期内，当抵押人的合法承继人依法承继抵押物时，本合同项下的各项责任和义务由该承继人承担。抵押权人根据本合同对抵押物拥有的抵押权不受上述承继情形的任何影响。承继人有责任于承继抵押物之日起十五日内向有管辖权的登记机关（构）办理抵押登记的变更手续，有关费用由承继人自行承担。</p>
