--- a/A_dbms/templates/dbms/agree/agree_board/loan_co/notify-d.html
+++ b/A_dbms/templates/dbms/agree/agree_board/loan_co/notify-d.html
@@ -1,14 +1,23 @@
-<p>10.1本合同规定一方向相对方发出的通知或书面函件可通过当面递交、专递信函、传真或电子邮件、手机短信等电子通讯方式送达。</p>
-<p>10.2本合同双方确认的有效送达地址如下：</p>
+<p>抵押权人与抵押人双方就本合同中涉及各类通知、协议等文件及就合同发生纠纷时相关文件和法律文书送达时的送达地址及法律后果作下列条款约定：</p>
+<p>10.1抵押权人与抵押人双方确认的有效送达地址如下：</p>
 <div>{% include 'dbms/agree/agree_board/loan_co/notify-s.html' %}</div>
 <p>如至抵押权人：成都武侯武兴小额贷款有限责任公司</p>
 <p>地址：成都市武侯区武科西五路360号西部智谷B区2栋4单元4楼附楼</p>
 <p>电话：028-85014022</p>
 <p>收件人：成都武侯武兴小额贷款有限责任公司</p>
-<p>10.3抵押权人对抵押人发出的函件在以下时间通知被视为已经送达：</p>
-<p>（1）如果以当面递交方式送达，送达指定地址并签署回执或其他送达证明；</p>
-<p>（2）如果是以专递信函方式送达，为递交日后的第三个工作日；</p>
-<p>（3）如果是以传真的方式送达，为发送传真方的传真机发送的报告确认书（表明已向相关传真号码发送完整的、未中断的传真）上标记之日视为已送达收件人；</p>
-<p>（4）如果是以电子邮件、手机短信等数据电文形式的，该等通知自发送之日视为已送达收件人。</p>
-<p>10.4本合同有效期间，任何一方的住所或通讯地址、联系人、联系方式等发生变更的，应当在变更后立即通知或可能发生前7个工作日内书面通知相对方；企业或者其他组织抵押人名称（自然人抵押人姓名）、住所等发生变化而未书面通知抵押权人，抵押权人按本合同所载名称（姓名）、通讯地址、住所向抵押人发送所有文书，视同已向抵押人送达。</p>
-<p>10.5抵押权人通过新闻媒体进行公告催收，公告期间超过15天即视为对主合同债务人、抵押人完成送达。</p>
+<p>10.2抵押权人与抵押人双方确认上述送达地址适用范围包括非诉时各类通知、协议等文件以及就合同发生纠纷时相关文件和法律文书的送达，同时包括在争议进入仲裁、民事诉讼程序后的一审、二审、再审和执行程序。</p>
+<p>10.3双方的送达地址需要变更时应向对方履行书面的通知义务；仲裁及民事诉讼阶段当事人地址变更时应当向仲裁机构、人民法院履行送达地址变更通知义务。未履行以上通知义务的，双方确认的送达地址仍视为有效送达地址。</p>
+<p>任何一方未按前述方式履行通知义务，双方所确认的送达地址仍视为有效送达地址。</p>
+<p>10.4双方将按如下规定确定通知送达被视为正式送达的日期；</p>
+<p>1、直接送达：以专人直接递送的，接收人(包括本合同指定收件人、法定代表人及其指定的接收人）签收之日视为送达。</p>
+<p>2、邮寄送达：</p>
+<p>（1）以特快专递形式发出的，发往本市市内的，发出后第二日视为送达；发往内地其他地区的，发出后第三日视为送达；发往港、澳、台地区的，发出后第四日视为送达；发往境外其他国家或地区的，发出后第六日视为送达。</p>
+<p>（2）以挂号方式发出的，发往本市的，邮寄后第三日视为送达；发往内地区的，发出后第四日视为送达；发往港、澳、台地区的，发出后第五日视为送达；发往境外其他国家或地区的，发出后第七日视为送达。</p>
+<p>10.5因以下情形导致法律文书未能被当事人接受的，依然产生送达的法律后果：</p>
+<p>1、因当事人提供或者确认的送达地址不准确的；</p>
+<p>2、送达地址变更后未及时书面告知对方和仲裁机构、人民法院的；</p>
+<p>3、当事人或有权签收人拒绝签收的。</p>
+<p>发生上述情形时，适用本条第10.4款。</p>
+<p>10.6履行送达地址变更通知义务的，以变更后的送达地址为有效送达地址。对于上述当事人在合同中明确约定的送达地址，法院进行送达时可直接邮寄送达，即使当事人未能收到法院邮寄送达的文书，由于其在合同中的约定，也应当视为送达。</p>
+<p>10.7纠纷进入仲裁、民事诉讼程序后，如当事人应诉并直接向仲裁机构、法院提交送达地址确认书，该确认地址与本合同的送达地址不一致的，以向仲裁机构、法院提交确认的送达地址为准。送达地址确认书中载明的送达地址为律师或委托代理人地址的，本合同的确认的送达地址同时有效。</p>
+<p>10.8本约定作为合同中独立存在的条款，不受合同其他条款效力的影响。</p>
