--- a/A_dbms/templates/dbms/agree/agree_board/loan_co/l-c-s-d.html
+++ b/A_dbms/templates/dbms/agree/agree_board/loan_co/l-c-s-d.html
@@ -226,7 +226,7 @@
             </div>
             <div class="sign-page-j">
                 <p>抵押权人（公章）：{{ UN }}</p>
-                <p>法定代表人（或负责人或授权代理人）：何长见</p>
+                <p>法定代表人（或负责人或授权代理人）：黄一平</p>
                 <p>（签字或盖章）</p>
                 {% include 'dbms/agree/agree_board/sign-date.html' %}
             </div>
